More DE translations

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -170,67 +170,67 @@ action_join_online_storage.description=Online folder lokal speichern
 action_join_online_storage.key=B
 action_join_online_storage.name=Speichern
 
+action_members_refresh.description=Läd die Liste der Mitglieder und Berechtigungen neu
+action_members_refresh.key=L
+action_members_refresh.name=Neu laden
+
+action_most_recent_changes.description=Zeigt die kürzlich geänderten Dateien
+action_most_recent_changes.key=Ä
+action_most_recent_changes.name=Kürzliche Änderungen
+
+action_new_folder.description=Erstellen einen neuen Folder
+action_new_folder.key=N
+action_new_folder.name=Neuer Folder
+
+action_online_storage.description=Öffnet den Folder im Webbrowser
+action_online_storage.key=O
+action_online_storage.name=Online Speicher
+
+action_open_about_box.description=Zeigt Informationen über PowerFolder
+action_open_about_box.key=Ü
+action_open_about_box.name=Über
+
+action_open_chat.description=Öffnet den Chat mit diesem Computer
+action_open_chat.key=C
+action_open_chat.name=Chat
+
+action_open_debug_information.description=Öffnet das Debug fenster
+action_open_debug_information.key=D
+action_open_debug_information.name=Debug
+
+action_open_downloads_information.description=Zeigt Informationen über die Downloads
+action_open_downloads_information.key=D
+action_open_downloads_information.name=Downloads
+
+action_open_explorer.description=Öffnet diesen Folder im Datei-Browser
+action_open_explorer.key=Ö
+action_open_explorer.name=Öffnen
+
+action_open_file.description=Öffnet diese Datei
+action_open_file.key=Ö
+action_open_file.name=Öffnen
+
+action_open_files_information.description=Öffnet die Dateinliste des Folders
+action_open_files_information.key=A
+action_open_files_information.name=Dateien ansehen
+
+action_open_invitation_received_wizard.description=Öffnet die Einladung
+action_open_invitation_received_wizard.key=E
+action_open_invitation_received_wizard.name=Einladung
+
+action_open_members_information.description=Zeigt Informationen zu den Mitgliedernk
+action_open_members_information.key=M
+action_open_members_information.name=Mitglieder
+
+action_open_preferences.description=Öffnet die Einstellungen
+action_open_preferences.key=E
+action_open_preferences.name=Einstellungen
+
 ## -------------------------------------------------------------------
 ##
 ## @ TOT: Bis hier übersetzt
 ##
 ## -------------------------------------------------------------------
-
-##action_members_refresh.description=Refreshes member list and permissions
-##action_members_refresh.key=R
-##action_members_refresh.name=Refresh
-
-##action_most_recent_changes.description=Show most recent changes
-##action_most_recent_changes.key=R
-##action_most_recent_changes.name=Recent Changes
-
-##action_new_folder.description=Create a new folder
-##action_new_folder.key=N
-##action_new_folder.name=New Folder
-
-##action_online_storage.description=Open this online storage folder in browser
-##action_online_storage.key=O
-##action_online_storage.name=Online Storage
-
-##action_open_about_box.description=Show information about PowerFolder
-##action_open_about_box.key=A
-##action_open_about_box.name=About
-
-##action_open_chat.description=Open a chat session with this computer
-##action_open_chat.key=C
-##action_open_chat.name=Chat
-
-##action_open_debug_information.description=Open Debug information dialog
-##action_open_debug_information.key=D
-##action_open_debug_information.name=Debug
-
-##action_open_downloads_information.description=Show details of recent file downloads
-##action_open_downloads_information.key=D
-##action_open_downloads_information.name=Downloads
-
-##action_open_explorer.description=Open this folder in your operating system's file explorer
-##action_open_explorer.key=O
-##action_open_explorer.name=Open
-
-##action_open_file.description=Open file in operating system
-##action_open_file.key=O
-##action_open_file.name=Open
-
-##action_open_files_information.description=Open files information for this folder
-##action_open_files_information.key=F
-##action_open_files_information.name=Browse files
-
-##action_open_invitation_received_wizard.description=Open invitation received wizard
-##action_open_invitation_received_wizard.key=I
-##action_open_invitation_received_wizard.name=Invitation
-
-##action_open_members_information.description=Open members information for this folder
-##action_open_members_information.key=M
-##action_open_members_information.name=Members
-
-##action_open_preferences.description=Open the preferences dialog
-##action_open_preferences.key=P
-##action_open_preferences.name=Preferences
 
 ##action_open_problem.description=Open details of this problem in your browser
 ##action_open_problem.key=O
