--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -226,79 +226,73 @@ action_open_preferences.description=Öffnet die Einstellungen
 action_open_preferences.key=E
 action_open_preferences.name=Einstellungen
 
-## -------------------------------------------------------------------
-##
-## @ TOT: Bis hier übersetzt
-##
-## -------------------------------------------------------------------
+action_open_problem.description=Zeigt details dieses problems im browser
+action_open_problem.key=D
+action_open_problem.name=Details
 
-##action_open_problem.description=Open details of this problem in your browser
-##action_open_problem.key=O
-##action_open_problem.name=Open
+action_open_settings_information.description=Öffnet die Einstellungen dieses Folders
+action_open_settings_information.key=E
+action_open_settings_information.name=Einstellungen
 
-##action_open_settings_information.description=Open settings information for this folder
-##action_open_settings_information.key=S
-##action_open_settings_information.name=Settings
+action_open_uploads_information.description=Zeigt details der kürzlich durchgeführten Uploads
+action_open_uploads_information.key=U
+action_open_uploads_information.name=Uploads
 
-##action_open_uploads_information.description=Show details of recent file uploads
-##action_open_uploads_information.key=U
-##action_open_uploads_information.name=Uploads
+action_pause_sync.description=Pausiert alle Synchronisations-Aufgaben
+action_pause_sync.key=P
+action_pause_sync.name=Pause
 
-##action_pause_sync.description=Pause all synchronization tasks
-##action_pause_sync.key=P
-##action_pause_sync.name=Pause
+action_preview_folder.description=Nur Vorschau dieses Folders aktivieren.
+action_preview_folder.key=V
+action_preview_folder.name=Vorschau
 
-##action_preview_folder.description=Convert this folder to a preview
-##action_preview_folder.key=P
-##action_preview_folder.name=Preview
+action_reconnect.description=Verbindet sich neu mit dem Zielcomputer
+action_reconnect.key=V
+action_reconnect.name=Neu verbinden
 
-##action_reconnect.description=Reconnect to this computer now
-##action_reconnect.key=C
-##action_reconnect.name=Reconnect
+action_remove_directory.description=Verzeichnis löschen
+action_remove_directory.key=L
+action_remove_directory.name=Löschen
 
-##action_remove_directory.description=Remove directory
-##action_remove_directory.key=R
-##action_remove_directory.name=Remove
+action_remove_folder.description=Entfernt diesen Folder
+action_remove_folder.key=E
+action_remove_folder.name=Entfernen
 
-##action_remove_folder.description=Remove this folder
-##action_remove_folder.key=R
-##action_remove_folder.name=Remove
+action_remove_friend.description=Entfernt den Computer von der Freundesliste
+action_remove_friend.key=E
+action_remove_friend.name=Entfernen
 
-##action_remove_friend.description=Remove computer from friend list
-##action_remove_friend.key=R
-##action_remove_friend.name=Remove
+action_remove_ignore.description=Dateien mitsynchronisieren
+action_remove_ignore.key=E
+action_remove_ignore.name=Einschließen
 
-##action_remove_ignore.description=Include files in sync
-##action_remove_ignore.key=I
-##action_remove_ignore.name=Include
+action_remove_invitee.description=Entfernt den Eingeladenen
+action_remove_invitee.key=E
+action_remove_invitee.name=Entfernen
 
-##action_remove_invitee.description=Remove invitee
-##action_remove_invitee.key=R
-##action_remove_invitee.name=Remove
+action_resolve_problem.description=Problem lösen
+action_resolve_problem.key=L
+action_resolve_problem.name=Lösen
 
-##action_resolve_problem.description=Resolve problem(s)
-##action_resolve_problem.key=R
-##action_resolve_problem.name=Resolve
+action_restore_archive.description=Stellt eine archivierte Version der Datei wieder her
+action_restore_archive.key=W
+action_restore_archive.name=Wiederherstellen
 
-##action_restore_archive.description=Restore archived file version
-##action_restore_archive.key=R
-##action_restore_archive.name=Restore
+action_restore_file.description=Stellt eine archivierte Version der Datei wieder her
+action_restore_file.key=W
+action_restore_file.name=Wiederherstellen
 
-##action_restore_file.description=Undelete file
-##action_restore_file.key=R
-##action_restore_file.name=Restore
+action_search_computer.description=Nach Computer suchen
+action_search_computer.key=S
+action_search_computer.name=Suchen
 
-##action_search_computer.description=Search for a computer
-##action_search_computer.key=S
-##action_search_computer.name=Search
+action_search_invitee.description=Nach Computer oder Personen suchen um diese einzuladen
+action_search_invitee.key=S
+action_search_invitee.name=Suchen
 
-##action_search_invitee.description=Search for invitees
-##action_search_invitee.key=S
-##action_search_invitee.name=Search
-
-##action_single_file_transfer.description=Transfer file to other computer
-##action_single_file_transfer.key=T
-##action_single_file_transfer.name=Transfer
+action_single_file_transfer.description=Versendet die Datei an einen anderen Computer
+action_single_file_transfer.key=V
+action_single_file_transfer.name=Versenden
 
 ##action_single_file_transfer_accept.description=Single file transfer accept
 ##action_single_file_transfer_accept.key=A
@@ -308,30 +302,30 @@ action_open_preferences.name=Einstellungen
 ##action_single_file_transfer_offer.key=O
 ##action_single_file_transfer_offer.name=Offer
 
-##action_stop_online_storage.description=Stop backing up this folder to Online Storage
-##action_stop_online_storage.key=S
-##action_stop_online_storage.name=Stop online backup
+action_stop_online_storage.description=Hält die Sicherung der Dateien auf den Online Speicher an.
+action_stop_online_storage.key=A
+action_stop_online_storage.name=Online backup anhalten
 
-##action_stop_preview_folder.description=Join this preview folder
-##action_stop_preview_folder.key=J
-##action_stop_preview_folder.name=Join
+action_stop_preview_folder.description=Speichert / Synchronisiert diesen Folder vollständig auf diesem Computer
+action_stop_preview_folder.key=E
+action_stop_preview_folder.name=Lokal speichern
 
-##action_sync_all_folders.description=Synchronizes all folders now (F5)
-##action_sync_all_folders.key=S
-##action_sync_all_folders.name=Synchronize
+action_sync_all_folders.description=Jetzt alle Folder synchronisieren (F5)
+action_sync_all_folders.key=S
+action_sync_all_folders.name=Synchronisieren
 
-##action_sync_folder.description=Synchronize this folder now
-##action_sync_folder.key=S
-##action_sync_folder.name=Synchronize
+action_sync_folder.description=Diesen Folder jetzt synchronisieren
+action_sync_folder.key=S
+action_sync_folder.name=Synchronisieren
 
-##action_unmark.description=Unmark as new file (clear from downloads)
-##action_unmark.key=U
-##action_unmark.name=Unmark
+action_unmark.description=Markiert diese Änderung als gelesen (fertige Downloads verstecken)
+action_unmark.key=G
+action_unmark.name=Gelesen
 
 #orig#addressEditor.parse_error=<html>Please enter the IPs to be considered on LAN, valid inputs are\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.parse_error=<html>Bitte geben Sie die IP-Adressen des LANs ein, G\u00fcltige Eingaben sind\:<br>xxx.xxx.xxx.xxx oder<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 #orig#addressEditor.title=IP-Range
-addressEditor.title=LAN-IP-Bereich
+addressEditor.title=IP-Bereich
 
 #orig#apps.dir.firefox=Firefox
 apps.dir.firefox=Firefox
@@ -342,71 +336,69 @@ apps.dir.sunbird=Sunbird
 #orig#apps.dir.thunderbird=Thunderbird
 apps.dir.thunderbird=Thunderbird
 
-##archive.full_backup=Full backup
-##archive.no_backup=No backup
+archive.full_backup=Vollbackup
+archive.no_backup=Kein Backup
 
-##archive_mode_selector_panel.none=None
-##archive_mode_selector_panel.unlimited=Unlimited
-##archive_mode_selector_panel.version={0} version
-##archive_mode_selector_panel.versions={0} versions
+archive_mode_selector_panel.none=Kein
+archive_mode_selector_panel.unlimited=Unbegrenzt
+archive_mode_selector_panel.version={0} Version
+archive_mode_selector_panel.versions={0} Versionen
 
-##chat.notification.message=You have received a chat message.
-##chat.notification.title=Chat Message Received
+chat.notification.message=Sie haben eine Chat-Nachricht erhalten.
+chat.notification.title=Nachrict erhalten
 
-##chat_frame.title=Chat
-##chat_frame.tool_tip=Chat with {0}
+chat_frame.title=Chat
+chat_frame.tool_tip=Chat mit {0}
 
 #orig#chat_panel.cannot_deliver=Message can not be delivered because '{0}' is not connected
 chat_panel.cannot_deliver=Die Nachricht konnte nicht zugestellt werden, da '{0}' nicht verbunden ist\!
-##chat_panel.close_button.tool_tip=Close chat session with {0}
+chat_panel.close_button.tool_tip=Chat mit {0} schließen
 #orig#chat_panel.member_connected_at_time={0} connected at {1}
 chat_panel.member_connected_at_time={0} verbunden um {1}
 #orig#chat_panel.member_disconnected_at_time={0} disconnected at {1}
 chat_panel.member_disconnected_at_time={0} getrennt um {1}
-##chat_panel.member_joined_folder_at_time={0} joined folder {1} at {2}
-##chat_panel.member_left_folder_at_time={0} left folder {1} at {2}
+chat_panel.member_joined_folder_at_time={0} ist Folder {1} beigetreten um {2}
+chat_panel.member_left_folder_at_time={0} hat Folder {1} verlassen um {2}
 
 #orig#check_status.in_sync_all=All PowerFolders are synchronized
 check_status.in_sync_all=Alle PowerFolder sind synchronisiert
 #orig#check_status.powerfolders={0} in {1} PowerFolder(s)
-check_status.powerfolders={0} in {1} PowerFolder
+check_status.powerfolders={0} von {1} PowerFolder
 #orig#check_status.syncing=Synchronizing {0} PowerFolder(s)
 check_status.syncing=Synchronisiere {0} PowerFolder
 #orig#check_status.title=Status of My PowerFolders
 check_status.title=\u00dcbersicht meiner PowerFolder
 
-##computers_list.collapse_hint=Collapse group
-##computers_list.expand_hint=Expand group
-##computers_list.friends=Friends
-##computers_list.lan=LAN
-##computers_list.my_computers=My Computers
+computers_list.collapse_hint=Gruppe verstecken
+computers_list.expand_hint=Gruppe anzeigen
+computers_list.friends=Freunde
+computers_list.lan=LAN
+computers_list.my_computers=Meine Computer
 
-##computers_tab.no_computers_available=No computers available
-##computers_tab.show_offline=Show offline
+computers_tab.no_computers_available=Kein Computer gefunden
+computers_tab.show_offline=Offline anzeigen
 
-##config.loader.dialog.error=Error\: {0}
-##config.loader.dialog.error.address.invalid=Incomplete or invalid address
-##config.loader.dialog.error.config.empty=Client configuration file empty
-##config.loader.dialog.error.config.notfound=Client configuration file not found
-##config.loader.dialog.error.generic=Unable to load configuration
-##config.loader.dialog.error.host.notfound=Host not found
-##config.loader.dialog.error.server.missing=Server host missing in client configuration file
-##config.loader.dialog.exit=Exit
-##config.loader.dialog.info=Please enter the web address of your storage provider\:
-##config.loader.dialog.loaded=Loaded {0} settings
-##config.loader.dialog.skip=Skip
-##config.loader.dialog.title=PowerFolder\: Select storage provider
+config.loader.dialog.error=Fehler\: {0}
+config.loader.dialog.error.address.invalid=Unvollständige oder ungültige Adresse
+config.loader.dialog.error.config.empty=Client Konfiguration leer
+config.loader.dialog.error.config.notfound=Client Konfiguration nicht gefunden
+config.loader.dialog.error.generic=Client Konfiguration konnte nicht geladen werden
+config.loader.dialog.error.host.notfound=Kein Server
+config.loader.dialog.error.server.missing=Kein Server in Client Konfiguration gefunden
+config.loader.dialog.exit=Ende
+config.loader.dialog.info=Bitte adresse des Servers eingeben\:
+config.loader.dialog.loaded={0} Konfigurationen geladen
+config.loader.dialog.skip=Überspringen
+config.loader.dialog.title=PowerFolder\: Server wählen
 
-##connect.dialog.text=Please enter the hostname or IP of the computer you want to connect.\n\nPowerFolder automatically connects to the network after a short time;\nuse this option if you want to manually connect to a computer.\n
-##connect.dialog.title=Manually connect to a PowerFolder computer
+connect.dialog.text=Geben Sie den Hostname oder die IP des Ziel-Computers ein.\n\nPowerFolder verbindet sich i.d.R. automatisch;\nVerwenden Sie diese Funktion um manuell eine Verbindung herzustellen.\n
+connect.dialog.title=Manuell Verbinden
 
-##connection_lan.text=Connected via local area network
+connection_lan.text=Im lokalen Netzwerk gefunden
 
-##connection_quality_good.text=Good connection quality
-
-##connection_quality_medium.text=Medium connection quality
-
-##connection_quality_poor.text=Poor connection quality
+connection_quality_good.text=Gute Verbindungsqualität
+connection_quality_medium.text=Mittelmäßige Verbindungsqualität
+connection_quality_poor.text=Schelchte Verbindungsqualität
 
 #orig#date_format.detailed_time=[HH\:mm\:ss\:SSS]
 date_format.detailed_time=[HH\:mm\:ss\:SSS]
@@ -419,10 +411,16 @@ date_format.full_date=dd.MM.yyyy HH\:mm\:ss
 #orig#date_format.time_only_date=[HH\:mm\:ss]
 date_format.time_only_date=[HH\:mm\:ss]
 
-##debug_information_card.title=Debug
+debug_information_card.title=Debug
 
-##delete.busy.description=Moving file from your folder to recycle bin
-##delete.busy.title=Deleting file
+delete.busy.description=In das Archive schieben
+delete.busy.title=Löschen Dateien
+
+## -------------------------------------------------------------------
+##
+## @ TOT: Bis hier übersetzt
+##
+## -------------------------------------------------------------------
 
 #orig#dialog.already_running.exit_button=Exit
 dialog.already_running.exit_button=Ende
