--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1897,46 +1897,46 @@ wizard.webservice.password=Passwort
 #orig#wizard.webservice.username=Email\:
 wizard.webservice.username=Email
 #orig#wizard.what_to_do.backp.select=Please select the files to backup
-wizard.what_to_do.backp.select=Bitte w\u00e4hlen Sie das Verzeichnis, da\u00df gesichert werden soll.
+wizard.what_to_do.backp.select=Welche Dateien sollen gesichert werden?
 #orig#wizard.what_to_do.backup_folder=Backup files
-wizard.what_to_do.backup_folder=Verzeichnis sichern
-##wizard.what_to_do.backup_folder.tip=Choose this option to backup files to other computers
+wizard.what_to_do.backup_folder=Dateien sichern
+wizard.what_to_do.backup_folder.tip=Wählen Sie diese Option um die Dateien zu sichern
 #orig#wizard.what_to_do.custom_sync=Advanced setup
 wizard.what_to_do.custom_sync=Erweitertes Setup
-##wizard.what_to_do.custom_sync.tip=Choose this option to configure customized file transfer modes
+wizard.what_to_do.custom_sync.tip=Wählen Sie diese Option und erweiterte Synchronisatonseinstellungen zu verwenden
 #orig#wizard.what_to_do.folder_backup_success=You successfully set up a folder backup\!\n
-wizard.what_to_do.folder_backup_success=Sie haben die automatische Sicherung\nerfolgreich eingerichtet\!
+wizard.what_to_do.folder_backup_success=Sie haben das Backup\nerfolgreich eingerichtet\!
 #orig#wizard.what_to_do.folder_host_success=You successfully set up a host folder\!\n
 wizard.what_to_do.folder_host_success=Verzeichnis wurde erfolgreich freigegeben\!\n
 #orig#wizard.what_to_do.host_pcs.select=Please select the files to send/shared
-wizard.what_to_do.host_pcs.select=Welches Verzeichnis soll freigegeben werden?
+wizard.what_to_do.host_pcs.select=Welche Dateien sollen versendet werden?
 #orig#wizard.what_to_do.host_pcs_join=Other computers can join this folder now
 wizard.what_to_do.host_pcs_join=Sie k\u00f6nnen nun anderen Computern Zugriff geben.
 #orig#wizard.what_to_do.host_work=Send/Share files
-wizard.what_to_do.host_work=Verzeichnis freigeben/versenden
-##wizard.what_to_do.host_work.tip=Choose this option to host files or share them with other computers
+wizard.what_to_do.host_work=Dateien freigeben/versenden
+wizard.what_to_do.host_work.tip=Wählen Sie diese Option um Dateien zu versenden
 #orig#wizard.what_to_do.invite.select_local=Please select local target directory for the files
 wizard.what_to_do.invite.select_local=W\u00e4hlen Sie das lokale Verzeichnis aus
-##wizard.what_to_do.join_online=Sync previously setup folders
-##wizard.what_to_do.join_online.tip=Sync files from previously setup computers with this computer
+wizard.what_to_do.join_online=Bestehenden Folder synchronisieren
+wizard.what_to_do.join_online.tip=Bereits aufgesetzten Folder mit diesem Computer synchronisieren
 #orig#wizard.what_to_do.load_invite=Open invitation file
 wizard.what_to_do.load_invite=Einladungs-Datei \u00f6ffnen
-##wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an invitation
-##wizard.what_to_do.no_os_text=There are no online folders available that\ncould be synced with this computer.
+wizard.what_to_do.load_invite.tip=Einen Folder einrichten mittels Einladungs-Datei
+wizard.what_to_do.no_os_text=Keine Online folder verfügbar, die\nmit diesem Computer synchronisiert werden könnten.
 #orig#wizard.what_to_do.open_online_documentation=Open documentation
-wizard.what_to_do.open_online_documentation=Online Dokumentation \u00f6ffnen
-##wizard.what_to_do.open_online_documentation.tip=Open online documentation about setting up PowerFolder
+wizard.what_to_do.open_online_documentation=Dokumentation \u00f6ffnen
+wizard.what_to_do.open_online_documentation.tip=Online Dokumentation aufrufen
 #orig#wizard.what_to_do.pcs_join=Other computers can join this folder now
 wizard.what_to_do.pcs_join=Andere Computer k\u00f6nnen nun dem Folder beitreten
 #orig#wizard.what_to_do.sync_pcs.pcs_join=Other computers can join this folder now
-wizard.what_to_do.sync_pcs.pcs_join=Ihre Daten werden nun mit den anderen Computer(n) synchronisiert
+wizard.what_to_do.sync_pcs.pcs_join=Andere Computer k\u00f6nnen nun dem Folder beitreten
 #orig#wizard.what_to_do.sync_pcs.select=Please select the files to synchronize
-wizard.what_to_do.sync_pcs.select=Bitte w\u00e4hlen Sie das Verzeichnis, welches synchronisiert werden soll
+wizard.what_to_do.sync_pcs.select=Welche Dateien sollen synchronisiert werden?
 #orig#wizard.what_to_do.sync_pcs.success=You successfully set up a folder mirror\!\n
-wizard.what_to_do.sync_pcs.success=Computer Spiegelung wurde erfolgreich eingerichtet\!\n
+wizard.what_to_do.sync_pcs.success=Synchronisierung wurde erfolgreich eingerichtet\!\n
 #orig#wizard.what_to_do.synchronized_folder=Synchronize files
-wizard.what_to_do.synchronized_folder=Computer synchronisieren
-##wizard.what_to_do.synchronized_folder.tip=Choose this option to synchronize files with other computers
+wizard.what_to_do.synchronized_folder=Dateien synchronisieren
+wizard.what_to_do.synchronized_folder.tip=Mit dieser Option synchronisieren Sie Dateien zwischen mehreren Computern
 #orig#wizard.what_to_do.title=What do you want to do?
 wizard.what_to_do.title=Was m\u00f6chten Sie tun?
-##wizard.worker.problem=Problem occurred
+wizard.worker.problem=Problem aufgetreten
