refs #1743 German translation

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -416,12 +416,6 @@ debug_information_card.title=Debug
 delete.busy.description=In das Archive schieben
 delete.busy.title=Löschen Dateien
 
-## -------------------------------------------------------------------
-##
-## @ TOT: Bis hier übersetzt
-##
-## -------------------------------------------------------------------
-
 #orig#dialog.already_running.exit_button=Exit
 dialog.already_running.exit_button=Ende
 #orig#dialog.already_running.start_button=Start anyways
@@ -430,16 +424,16 @@ dialog.already_running.start_button=Trotzdem starten
 dialog.already_running.title=L\u00e4uft bereits
 #orig#dialog.already_running.warning=PowerFolder already running\n\nHint\: If you restarted PowerFolder, \nkill all javaw/java processes and try again
 dialog.already_running.warning=PowerFolder l\u00e4uft bereits
-##dialog.ask_for_friendship.button.add=Add to friends
-##dialog.ask_for_friendship.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
-##dialog.ask_for_friendship.message_title=Message from {0}
-##dialog.ask_for_friendship.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
-##dialog.ask_for_friendship.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
-##dialog.ask_for_friendship.title=Add {0} to friend list
-##dialog.ask_for_quit_on_x.Exit_button=Exit
-##dialog.ask_for_quit_on_x.Minimize_button=Minimize
-##dialog.ask_for_quit_on_x.text=Should PowerFolder be minimized to system tray or exited?
-##dialog.ask_for_quit_on_x.title=Minimize to tray option
+dialog.ask_for_friendship.button.add=Als Freund hinzufügen
+dialog.ask_for_friendship.explain=Zu Freunden wird eine\nVerbindung aufrecht erhalten.
+dialog.ask_for_friendship.message_title=Nachricht von {0}
+dialog.ask_for_friendship.question={0} ist diesen Foldern beigetreten\:\n\n{1}\nJetzt auf die Freundesliste setzen?
+dialog.ask_for_friendship.question2={0} hat Sie zu seinen Freunden hinzugefügt.\n\nJetzt auf die Freundesliste setzen?
+dialog.ask_for_friendship.title={0} als Freund hinzufügen
+dialog.ask_for_quit_on_x.Exit_button=Ende
+dialog.ask_for_quit_on_x.Minimize_button=Minimieren
+dialog.ask_for_quit_on_x.text=Soll PowerFolder minimiert oder beendet werden?
+dialog.ask_for_quit_on_x.title=In den Systembereich minimieren
 #orig#dialog.bind_error=Unable to bind port\!
 dialog.bind_error=Der Netzwerk Port ist bereits belegt
 #orig#dialog.bind_error.option.exit=Exit PowerFolder
@@ -456,16 +450,16 @@ dialog.connect.connecting=Verbinde
 dialog.connect.connecting_to=Verbinde zu {0}...
 #orig#dialog.connection_problem=Connection problem
 dialog.connection_problem=Verbindungsproblem
-##dialog.create_edit_profile.auto_download=Download new/changed files
+dialog.create_edit_profile.auto_download=Neue Dateien herunterladen
 #orig#dialog.create_edit_profile.cannot_save_name=This transfer mode cannot be saved because\nthere is already a transfer mode named {0}
 dialog.create_edit_profile.cannot_save_name=Transfer Modus kann nicht gespeichert werden.\nTransfer Modus {0} existiert bereits
 #orig#dialog.create_edit_profile.cannot_save_profile=This transfer mode cannot be saved because\nit is identical to transfer mode {0}
 dialog.create_edit_profile.cannot_save_profile=Transfer Modus kann nicht gespeichert werden.\nDieser ist identisch mit {0}
-##dialog.create_edit_profile.change_detection=Local change detection
+dialog.create_edit_profile.change_detection=Lokale Änderungen
 #orig#dialog.create_edit_profile.change_detection_manual=Manual
 dialog.create_edit_profile.change_detection_manual=Manuell
 #orig#dialog.create_edit_profile.configure_from=Copy from existing
-dialog.create_edit_profile.configure_from=Von einem bestehenden Transfer Modus kopieren
+dialog.create_edit_profile.configure_from=Vom Bestehenden kopieren
 #orig#dialog.create_edit_profile.daily_sync=Daily synchronization
 dialog.create_edit_profile.daily_sync=T\u00e4gliche Synchronisation
 #orig#dialog.create_edit_profile.duplicate_profile_title=Duplicate transfer mode
@@ -474,13 +468,13 @@ dialog.create_edit_profile.duplicate_profile_title=Doppelter Transfer Modus
 dialog.create_edit_profile.every_day=Jeden Tag
 #orig#dialog.create_edit_profile.hour_day_sync=Hour / day of sync
 dialog.create_edit_profile.hour_day_sync=Stunde / Tag der Synchronisation
-##dialog.create_edit_profile.periodic_sync=Periodic synchronization
+dialog.create_edit_profile.periodic_sync=Periodische Synchronisation 
 #orig#dialog.create_edit_profile.profile_name=Mode name
 dialog.create_edit_profile.profile_name=Name
-##dialog.create_edit_profile.suggestNameTemplate0={0} (copy)
-##dialog.create_edit_profile.suggestNameTemplateN={0} (copy {1})
-##dialog.create_edit_profile.sync_deletion=Synchronize deleted files
-##dialog.create_edit_profile.synchronization=Remote change detection
+dialog.create_edit_profile.suggestNameTemplate0={0} (Kopie)
+dialog.create_edit_profile.suggestNameTemplateN={0} (Kopie {1})
+dialog.create_edit_profile.sync_deletion=Datei-Löschungen synchronisieren
+dialog.create_edit_profile.synchronization=Entfernte Änderungen
 #orig#dialog.create_edit_profile.time_between_scans=Scan for changes every
 dialog.create_edit_profile.time_between_scans=Zeit zwischen \u00c4nderungssuche
 #orig#dialog.create_edit_profile.title_create=Create custom transfer mode
@@ -495,7 +489,7 @@ dialog.create_edit_profile.weekends=Am Wochenende
 dialog.delete_profile.title=Eigenen Transfer Modus l\u00f6schen
 #orig#dialog.fatal_error.title=Fatal Error
 dialog.fatal_error.title=Schwerer Fehler
-##dialog.node_select.hide_offline.name=Hide offline
+dialog.node_select.hide_offline.name=Offline verstecken
 #orig#dialog.node_select.multi_computers=Multiple computers selected
 dialog.node_select.multi_computers=Mehrere ausgew\u00e4hlt
 #orig#dialog.node_select.no_computers=No computers selected
@@ -504,6 +498,14 @@ dialog.node_select.no_computers=Keine Auswahl
 dialog.node_select.text=W\u00e4hlen Sie die Benutzer aus. Strg halten f\u00fcr mehrfache Auswahl.
 #orig#dialog.node_select.title=Select computers
 dialog.node_select.title=Benutzer ausw\u00e4hlen
+
+## -------------------------------------------------------------------
+##
+## @ TOT: Bis hier übersetzt
+##
+## -------------------------------------------------------------------
+
+
 ##dialog.personalized_message.hint=Add a personalized message for the recipient
 ##dialog.restore_archive.file_location=File location
 ##dialog.restore_archive.file_location.tip=Select file location
