refs #1743 German translation

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -499,23 +499,16 @@ dialog.node_select.text=W\u00e4hlen Sie die Benutzer aus. Strg halten f\u00fcr m
 #orig#dialog.node_select.title=Select computers
 dialog.node_select.title=Benutzer ausw\u00e4hlen
 
-## -------------------------------------------------------------------
-##
-## @ TOT: Bis hier übersetzt
-##
-## -------------------------------------------------------------------
-
-
-##dialog.personalized_message.hint=Add a personalized message for the recipient
-##dialog.restore_archive.file_location=File location
-##dialog.restore_archive.file_location.tip=Select file location
-##dialog.restore_archive.overwrite=Overwrite
-##dialog.restore_archive.overwrite_message=File already exists. Overwrite file?
-##dialog.restore_archive.overwrite_title=Overwrite file
-##dialog.restore_archive.restore=Restore file version to its original location
-##dialog.restore_archive.save=Save file version to a new location
-##dialog.restore_archive.save_error=There was a problem saving the file to disk\: {0}
-##dialog.restore_archive.title=Restore archived file
+dialog.personalized_message.hint=Persönliche Nachricht für den Empfänger
+dialog.restore_archive.file_location=Speicherort
+dialog.restore_archive.file_location.tip=Speicherort auswählen
+dialog.restore_archive.overwrite=Überschreiben
+dialog.restore_archive.overwrite_message=Datei existiert bereits. Überschreiben?
+dialog.restore_archive.overwrite_title=Datei überschreiben
+dialog.restore_archive.restore=Datei am Orginalort wiederherstellen
+dialog.restore_archive.save=Datei an einem anderen Ort speichern
+dialog.restore_archive.save_error=Es gab ein Problem beim Speichern der Datei\: {0}
+dialog.restore_archive.title=Archivierte Dateiversion wiederherstellen
 ##dialog.single_file_accept.line_1=You have received a single file offer from
 ##dialog.single_file_accept.line_2={0} for file {1}.
 ##dialog.single_file_accept.line_3=Please select destination directory.
@@ -539,9 +532,9 @@ dialog.synchronization.duplicate.use=Dieser Transfer Modus wird hier benutzt\:
 #orig#dialog.synchronization.receive_changes=Download changes
 dialog.synchronization.receive_changes=\u00c4nderunge erhalten
 #orig#dialog.synchronization.send_and_receive_changes=Up- and download changes
-dialog.synchronization.send_and_receive_changes=\u00c4nderungen ver\u00f6ffentlichen und neue erhalten
+dialog.synchronization.send_and_receive_changes=\u00c4nderungen versenden und neue erhalten
 #orig#dialog.synchronization.send_own_changes=Upload own changes
-dialog.synchronization.send_own_changes=\u00c4nderugen nur ver\u00f6ffentlichen
+dialog.synchronization.send_own_changes=\u00c4nderugen nur versenden
 #orig#dialog.synchronization.sychronizing=Synchronizing...
 dialog.synchronization.sychronizing=Synchronisiere...
 #orig#dialog.synchronization.title=Manual synchronization
@@ -550,77 +543,77 @@ dialog.synchronization.title=Manuelle Synchronisation
 dialog.unable_to_connect_to_member=Kann nicht zu {0} verbinden
 #orig#dialog.unable_to_open_port=Unable to open on local port {0}, maybe PowerFolder is already running
 dialog.unable_to_open_port=Kann Netzwerk Port {0} nicht \u00f6ffnen, PowerFolder k\u00f6nnte bereits laufen
-##dialog.update.updating=Updating
-##dialog.update.updating.text=Downloading update
-##dialog.update_check.downloadAndUpdate=Download and update now
-##dialog.update_check.downloadAndUpdateSilent=Download and silently update now
-##dialog.update_check.failed.text=Update failed. Please check your Internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
-##dialog.update_check.failed.title=Update failed
-##dialog.update_check.gotoHomepage=Go to PowerFolder homepage
-##dialog.update_check.noUpdateAvailable=This version is up to date
-##dialog.update_check.nothingNeverAsk=Nothing and never ask again
-##dialog.update_check.text=A newer version of PowerFolder is available            \n\nThis version\: v{0}\nLatest available\: v{1} (newer)\n
-##dialog.update_check.title=Newer version available
+dialog.update.updating=Führe Update durch
+dialog.update.updating.text=Lade Update herunter
+dialog.update_check.downloadAndUpdate=Herunterladen und updaten
+dialog.update_check.downloadAndUpdateSilent=Im Hintergrund laden und updaten
+dialog.update_check.failed.text=Update fehlgeschlagen. Bitte überprüfen Sie Ihre Interneteverbindung.
+dialog.update_check.failed.title=Update fehlgeschlagen
+dialog.update_check.gotoHomepage=PowerFolder homepage öffnen
+dialog.update_check.noUpdateAvailable=Diese Version is aktuell
+dialog.update_check.nothingNeverAsk=Nichts. Nicht mehr fragen
+dialog.update_check.text=Eine neuen Version wurde gefunden            \n\nDiese Version\: v{0}\nVerfügbare Version\: v{1} (neuer)\n
+dialog.update_check.title=Update verfügbar
 
 ##download.busy.description=Downloading files from other PowerFolder to your folder
-##download.busy.title=Downloading file
+##download.busy.title=Lade Datei
 
-##downloads_information_card.auto_cleanup.days={0} day(s)
-##downloads_information_card.auto_cleanup.description=Clean up any downloads when they complete
-##downloads_information_card.auto_cleanup.immediate=Immediate
-##downloads_information_card.auto_cleanup.name=Auto-cleanup
-##downloads_information_card.title=Downloads
+downloads_information_card.auto_cleanup.days={0} Tag(e)
+downloads_information_card.auto_cleanup.description=Räumt Downloads automatisch weg
+downloads_information_card.auto_cleanup.immediate=Sofort
+downloads_information_card.auto_cleanup.name=Auto-Aufräumen
+downloads_information_card.title=Downloads
 
 #orig#estimation.unknown=unknown
 estimation.unknown=unbekannt
 
-##exp_computer_view.account=User\: {0}
-##exp_computer_view.collapse=Collapse computer details
-##exp_computer_view.expand=Expand computer details
-##exp_computer_view.last_seen_text=Last seen online\: {0}
-##exp_computer_view.no_login=Not logged in
-##exp_computer_view.node_friend_connected_text=Connected friend computer
-##exp_computer_view.node_friend_disconnected_text=Disconnected friend computer
-##exp_computer_view.node_non_friend_connected_text=Connected non-friend computer
-##exp_computer_view.node_non_friend_disconnected_text=Disconnected non-friend computer
-##exp_computer_view.version=Client version\: {0}
+exp_computer_view.account=Benutzer\: {0}
+exp_computer_view.collapse=Computer details zuklappen
+exp_computer_view.expand=Computer details aufklappen
+exp_computer_view.last_seen_text=Zuletzt Online gesehen\: {0}
+exp_computer_view.no_login=Nicht angemeldet
+exp_computer_view.node_friend_connected_text=Verbundener Computer
+exp_computer_view.node_friend_disconnected_text=Nicht verbundener Computer
+exp_computer_view.node_non_friend_connected_text=Verbundener Computer
+exp_computer_view.node_non_friend_disconnected_text=Nicht verbundener Computer
+exp_computer_view.version=Programmversion\: {0}
 
-##exp_folder_view.collapse=Collapse folder details
-##exp_folder_view.estimated_synchronized=Estimated synchronized\: {0}
-##exp_folder_view.expand=Expand folder details
-##exp_folder_view.files=Files\: {0}
+exp_folder_view.collapse=Folder details zuklappen
+exp_folder_view.estimated_synchronized=Vorraussichtlich synchronisiert\: {0}
+exp_folder_view.expand=Folder details aufklappen
+exp_folder_view.files=Dateien\: {0}
 exp_folder_view.files_available={0} verfügbar
-##exp_folder_view.files_available_tip=Display the available files
-##exp_folder_view.folder_local_online_text=Local folder, backed up online
-##exp_folder_view.folder_local_text=Local folder
-##exp_folder_view.folder_online_text=Online folder
-##exp_folder_view.folder_preview_text=Preview folder
-##exp_folder_view.last_synchronized=Last synchronized\: {0}
-##exp_folder_view.local={0} local
-##exp_folder_view.members=Members\: {0} ({1} connected)
-##exp_folder_view.never_synchronized=Never synchronized
-##exp_folder_view.not_yet_scanned=Not yet scanned
-##exp_folder_view.synchronized={0}% synchronized
-##exp_folder_view.total={0} total
-##exp_folder_view.transfer_mode=Transfer mode\: {0}
-##exp_folder_view.unsynchronized=Unsynchronized
-##exp_folder_view.unsynchronized.tip=There are no connected folder members
+exp_folder_view.files_available_tip=Verfügbare Dateien ansehen
+exp_folder_view.folder_local_online_text=Lokaler Folder, online gesichert
+exp_folder_view.folder_local_text=Lokaler Folder
+exp_folder_view.folder_online_text=Online Folder
+exp_folder_view.folder_preview_text=Vorschau Folder
+exp_folder_view.last_synchronized=Letzte Synchronisation\: {0}
+exp_folder_view.local={0} lokal
+exp_folder_view.members=Mitglieder\: {0} ({1} verbunden)
+exp_folder_view.never_synchronized=Noch nicht synchronisiert
+exp_folder_view.not_yet_scanned=Nocht nicht überprüft
+exp_folder_view.synchronized={0}% synchronisiert
+exp_folder_view.total={0} gesamt
+exp_folder_view.transfer_mode=Transfer Modus\: {0}
+exp_folder_view.unsynchronized=Nicht synchronisiert
+exp_folder_view.unsynchronized.tip=Keine verbundenen Mitglieder
 
-##file_details_panel.availability=Availability
-##file_details_panel.available=Available
-##file_details_panel.deleted=Deleted
-##file_details_panel.downloading=Downloading
-##file_details_panel.expected=Expected
-##file_details_panel.location=Location
-##file_details_panel.modified_by=Modified by
-##file_details_panel.modified_date=Modified on
-##file_details_panel.name=Name
-##file_details_panel.newer_available=Newer version available
-##file_details_panel.normal=Local available
-##file_details_panel.not_available=Not available
-##file_details_panel.status=Status
-##file_details_panel.uploading=Uploading
-##file_details_panel.version=Version
+file_details_panel.availability=Verfügbarkeit
+file_details_panel.available=Verfügbar
+file_details_panel.deleted=Gelöscht
+file_details_panel.downloading=Läd herunter
+file_details_panel.expected=Erwartet
+file_details_panel.location=Ort
+file_details_panel.modified_by=Geändert von
+file_details_panel.modified_date=Geändert am
+file_details_panel.name=Name
+file_details_panel.newer_available=Neuere Version verfügbar
+file_details_panel.normal=Lokal verfügbar
+file_details_panel.not_available=Nicht vergfügbar
+file_details_panel.status=Status
+file_details_panel.uploading=Läd hoch
+file_details_panel.version=Version
 
 #orig#file_info.deleted=Deleted
 file_info.deleted=gel\u00f6scht
@@ -632,64 +625,70 @@ file_info.expected=erwartet
 file_info.ignore=Datei ausgeschlossen
 #orig#file_info.name=Name
 file_info.name=Name
-##file_info.new_version_available=New version of file available
+file_info.new_version_available=Neuere Version der Datei verfügbar
 #orig#file_info.recently_downloaded=Recently downloaded
-file_info.recently_downloaded=Neu heruntergeladen
+file_info.recently_downloaded=Kürzlich heruntergeladen
 #orig#file_info.remote_deleted=Newer version deleted by other computer
 file_info.remote_deleted=Neuere Version\: Gel\u00f6scht
 
-##file_version_tab.no_versions_available=No version history available
+file_version_tab.no_versions_available=Dateihistorie nicht verfügbar
 
-##file_versions_table_model.date=Date
-##file_versions_table_model.size=Size
-##file_versions_table_model.version=Version
+file_versions_table_model.date=Datum
+file_versions_table_model.size=Größe
+file_versions_table_model.version=Version
 
 #orig#filename_problem.duplicate=Duplicate filename found (with different case)
 filename_problem.duplicate=Doppelter Dateiname erkannt (mit unterschiedlicher Gross/Kleinschreibung)
 #orig#filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended
 filename_problem.ends_with_illegal_char=Dateiname endet mit Zeichen, die Probleme verursachen k\u00f6nnten.
-##filename_problem.ends_with_illegal_char.soln_desc=Rename the file
+filename_problem.ends_with_illegal_char.soln_desc=Datei umbennen
 #orig#filename_problem.not_recommended_chars=The filename contains characters that are not recommended
 filename_problem.not_recommended_chars=Dateiname enh\u00e4lt Zeichen, die Probleme verursachen k\u00f6nnten.
-##filename_problem.not_recommended_chars.soln_desc=Rename the file
+filename_problem.not_recommended_chars.soln_desc=Datei umbennen
 #orig#filename_problem.reserved_filename=The filename is a reserved filename on Windows
 filename_problem.reserved_filename=Der Dateiname darf unter Windows nicht verwendet werden (reserviert).
-##filename_problem.reserved_filename.soln_desc=Rename the file
-##filename_problem.too_long=The filename is too long
-##filename_problem.too_long.soln_desc=Rename the file
+filename_problem.reserved_filename.soln_desc=Datei umbennen
+filename_problem.too_long=Dateiname zu lang
+filename_problem.too_long.soln_desc=Datei umbennen
 
-##files_stats_panel.deleted_label=Deleted\: {0}
-##files_stats_panel.incoming_label=Incoming\: {0}
-##files_stats_panel.local_label=Local\: {0}
+files_stats_panel.deleted_label=Gelöscht\: {0}
+files_stats_panel.incoming_label=Verfügbar\: {0}
+files_stats_panel.local_label=Lokal\: {0}
 
-##files_tab.combo.deleted_and_previous_files=Deleted and recycled files
-##files_tab.combo.incoming_files_only=Incoming files only
-##files_tab.combo.local_and_incoming=Local and incoming files
-##files_tab.combo.local_files_only=Local files only
-##files_tab.combo.new_files_only=New files only
-##files_tab.combo.tool_tip=Select files to display
-##files_tab.flat_view.text=Flat view
-##files_tab.flat_view.tip=Flatten view of folder directory structure
+files_tab.combo.deleted_and_previous_files=Gelöschte und Archivierte Dateien
+files_tab.combo.incoming_files_only=Verfügbare Dateien
+files_tab.combo.local_and_incoming=Lokal und verfügbare Dateien
+files_tab.combo.local_files_only=Lokel Datein
+files_tab.combo.new_files_only=Neue Datein
+files_tab.combo.tool_tip=Datei-Filter
+files_tab.flat_view.text=Flache Ansicht
+files_tab.flat_view.tip=Flache Ansicht der Verzeichnisstruktur
 
-##files_table_model.date=Date
-##files_table_model.modified_by=Modified by
-##files_table_model.name=Name
-##files_table_model.size=Size
+files_table_model.date=Datum
+files_table_model.modified_by=Geändert von
+files_table_model.name=Name
+files_table_model.size=Größe
 
-##files_table_panel.file_details_tab.text=File Details
-##files_table_panel.file_details_tab.tip=Display information about the file
-##files_table_panel.file_versions_tab.text=File Versions
-##files_table_panel.file_versions_tab.tip=Display file version history
-##files_table_panel.no_files_available=No files available
+files_table_panel.file_details_tab.text=Datei-Details
+files_table_panel.file_details_tab.tip=Zeigt Informationen zur Datei
+files_table_panel.file_versions_tab.text=Datei-Versionen
+files_table_panel.file_versions_tab.tip=Zeigt die Datei-Historie an
+files_table_panel.no_files_available=Keine Dateien verfügbar
 
-##filter_text_field.clear.hint=Clear filtering
-##filter_text_field.glass.hint=Select filter mode
-##filter_text_field.menu.file_name_directory_name.text=Filter by file or directory
-##filter_text_field.menu.file_name_only.text=Filter by file name
-##filter_text_field.menu.modifier.text=Filter by modifier
-##filter_text_field.tip=Filter results
+filter_text_field.clear.hint=Filter entfernen
+filter_text_field.glass.hint=Filter modus auswählen
+filter_text_field.menu.file_name_directory_name.text=Nach Datei- und Verzeichnisname filtern
+filter_text_field.menu.file_name_only.text=Nach Dateiname filtern
+filter_text_field.menu.modifier.text=Nach "Geändert von" filtern
+filter_text_field.tip=Filter ergebnisse
 
-##find_computers_dialog.title=Find computers
+find_computers_dialog.title=Computer suchen
+
+## -------------------------------------------------------------------
+##
+## @ TOT: Bis hier übersetzt
+##
+## -------------------------------------------------------------------
 
 ##find_computers_panel.search_for_computer.hint=Search for a computer
 ##find_computers_panel.search_for_computer.tooltip=Enter three or more characters to search for a computer
