refs #1743 german translation

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -34,7 +34,7 @@ about_dialog.home_page=Homepage
 about_dialog.power_folder.build_date=Build datum\: {0}
 #orig#about_dialog.power_folder.build_time=Build time\: {0}
 about_dialog.power_folder.build_time=Build Zeit\: {0}
-##about_dialog.power_folder.distribution=Dist\: {0}
+about_dialog.power_folder.distribution=Dist\: {0}
 #orig#about_dialog.power_folder.max=Max memory\: {0}MB
 about_dialog.power_folder.max=Speicher (max)\: {0}MB
 #orig#about_dialog.power_folder.text=Version\: {0}
@@ -74,9 +74,9 @@ action_activate_warning.description=Zeigt warnungen
 action_activate_warning.key=W
 action_activate_warning.name=Warnung
 
-##action_add_directory.description=Add directory
-##action_add_directory.key=A
-##action_add_directory.name=Add
+action_add_directory.description=Verzeichnis hinzufügen
+action_add_directory.key=H
+action_add_directory.name=Hinzufügen
 
 action_add_friend.description=Einen Computer der Freundesliste hinzufügen
 action_add_friend.key=H
@@ -684,34 +684,28 @@ filter_text_field.tip=Filter ergebnisse
 
 find_computers_dialog.title=Computer suchen
 
-## -------------------------------------------------------------------
-##
-## @ TOT: Bis hier übersetzt
-##
-## -------------------------------------------------------------------
-
-##find_computers_panel.search_for_computer.hint=Search for a computer
-##find_computers_panel.search_for_computer.tooltip=Enter three or more characters to search for a computer
+find_computers_panel.search_for_computer.hint=Einen Computer suchen
+find_computers_panel.search_for_computer.tooltip=Drei oder mehr Buchstaben eingeben um die Suche zu starten
 
 #orig#folder.info_tip=Contains files and folders managed by PowerFolder
 folder.info_tip=Zeigt Dateien und Verzeichnisse, die von PowerFolder verwaltet werden
 
-##folder_create.dialog.select_directory.text=Select directory
-##folder_create.os_error.text=Unable to setup the Online Storage to backup folder {0}
+folder_create.dialog.select_directory.text=Verzeichnis wählen
+folder_create.os_error.text=Online Backup von {0} gescheitert
 
 #orig#folder_exception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
 folder_exception.dialog.text=Kann PowerFolder '{0}' nicht beitreten.\nGrund\: {1}
 #orig#folder_exception.dialog.title=Problem with PowerFolder '{0}'
 folder_exception.dialog.title=Problem mit PowerFolder '{0}'
 
-##folder_information_card.files.tips=Shows file details for this folder
-##folder_information_card.files.title=Files
-##folder_information_card.members.tips=Shows folder member details
-##folder_information_card.members.title=Members
-##folder_information_card.problems.tips=Shows problems for this folder
-##folder_information_card.problems.title=Problems
-##folder_information_card.settings.tips=Shows settings for this folder
-##folder_information_card.settings.title=Settings
+folder_information_card.files.tips=Zeigt Datei-Informationen des Folders
+folder_information_card.files.title=Dateien
+folder_information_card.members.tips=Zeigt Mitglieder details
+folder_information_card.members.title=Mitglieder
+folder_information_card.problems.tips=Zeigt Probleme dieses Folders
+folder_information_card.problems.title=Probleme
+folder_information_card.settings.tips=Zeigt die Einstellungen dieses Folders
+folder_information_card.settings.title=Einstellungen
 
 #orig#folder_join.dialog.title=Join PowerFolder {0}?
 folder_join.dialog.title=PowerFolder {0} beitreten?
@@ -719,23 +713,23 @@ folder_join.dialog.title=PowerFolder {0} beitreten?
 folder_join.join=Beitreten
 #orig#folder_join.join.key=J
 folder_join.join.key=J
-##folder_join.location.tip=Folder location
+folder_join.location.tip=Folder Speicherort
 
-##folder_member.change_owner.message=You are about to change the owner of the Folder.\nOld owner\: {0} (you)\nNew owner\: {1}
-##folder_member.change_owner.title=Change owner
-##folder_member.default_permission=Default permission\:
-##folder_member.nobody=Nobody
-##folder_member.not_connected_to_server=Not connected to server
-##folder_member.not_logged_in=Not logged in
-##folder_member.not_syncing=Not syncing
-##folder_member.server=Server
+folder_member.change_owner.message=Sie wollen den Eigentümer das Folders ändern.\nAlter Eigentümer\: {0} (Sie)\nNeuer Eigentümer\: {1}
+folder_member.change_owner.title=Eingentümer ändern
+folder_member.default_permission=Standardberechtigung\:
+folder_member.nobody=Niemand
+folder_member.not_connected_to_server=Kein Serververbindung
+folder_member.not_logged_in=Nicht angemeldet
+folder_member.not_syncing=Synchronisiert nicht
+fder_member.server=Server
 
-##folder_member_table_model.account=User
-##folder_member_table_model.icon=
-##folder_member_table_model.local_size=Local size
-##folder_member_table_model.name=Computer
-##folder_member_table_model.permission=Permission
-##folder_member_table_model.sync_status=Sync
+folder_member_table_model.account=Benutzer
+folder_member_table_model.icon=
+folder_member_table_model.local_size=Lokale Größe
+folder_member_table_model.name=Computer
+folder_member_table_model.permission=Berechtigung
+folder_member_table_model.sync_status=Sync
 
 #orig#folder_panel.settings_tab.addbutton.name=Add
 folder_panel.settings_tab.addbutton.name=Hinzuf\u00fcgen
@@ -744,17 +738,17 @@ folder_panel.settings_tab.editbutton.name=\u00c4ndern
 #orig#folder_panel.settings_tab.removebutton.name=Remove
 folder_panel.settings_tab.removebutton.name=Entfernen
 
-##folder_problem.no_owner=No owner found
-##folder_problem.no_owner.no_login.message=Unable to become owner.\nPlease login first.
-##folder_problem.no_owner.no_login.title=Not logged in
-##folder_problem.no_owner.soln_desc=Become owner of this folder now.
-##folder_problem.noconflictdetection=File {0} from {1} might have a version conflict, but uses an old client without conflict resolution support.
-##folder_problem.table_model.date=Date
-##folder_problem.table_model.description=Description
-##folder_problem.table_model.not_available=Not available
-##folder_problem.table_model.solution=Solution
-##folder_problem.table_model.wiki_link=Wiki Link
-##folder_problem.unsynchronized=Folder {0} has not been synchronized in {1} day(s).
+folder_problem.no_owner=Kein Eigentümer gefunden
+folder_problem.no_owner.no_login.message=Kann nicht Eigentümer werden.\nBitte erst anmelden.
+folder_problem.no_owner.no_login.title=Nicht angemeldet
+folder_problem.no_owner.soln_desc=Jetz Eigentümer dieses Folders werden.
+folder_problem.noconflictdetection=Konflikt für Datei {0} von {1} konnte nicht festgestellt werden. Benutzt zu alten Client
+folder_problem.table_model.date=Datum
+folder_problem.table_model.description=Beschreibung
+folder_problem.table_model.not_available=Nicht verfügbar
+folder_problem.table_model.solution=Lösung
+folder_problem.table_model.wiki_link=Wiki Link
+folder_problem.unsynchronized=Folder {0} wurde nicht mehr seit {1} Tag(en) synchronisiert.
 
 #orig#folder_remove.dialog.button.key=R
 folder_remove.dialog.button.key=E
@@ -773,17 +767,17 @@ folder_remove.dialog.text=PowerFolder {0} entfernen?
 #orig#folder_remove.dialog.title=Remove PowerFolder {0}?
 folder_remove.dialog.title=PowerFolder {0} entfernen?
 
-##folder_repository.continue_exit=Exit anyways
-##folder_repository.warn_on_close.text=These folders are not synchronized yet\:\n\n\n\n{0}
-##folder_repository.warn_on_close.title=Synchronizing
-##folder_repository.warn_on_close_eta.text=These folders are not synchronized yet\:\n\n\n\n{0}\n\nETA\: {1}
+folder_repository.continue_exit=Trotzdem beenden
+folder_repository.warn_on_close.text=Diese Folder wurden noch nicht fertig synchronisiert\:\n\n\n\n{0}
+folder_repository.warn_on_close.title=Synchronisiere
+folder_repository.warn_on_close_eta.text=Diese Folder wurden noch nicht fertig synchronisiert\:\n\n\n\n{0}\n\nETA\: {1}
 
-##folders_list.collapse_hint=Collapse group
-##folders_list.expand_hint=Expand group
-##folders_list.local_folders=Local Folders
-##folders_list.online_folders=Online Folders
+folders_list.collapse_hint=Gruppe zuklappen
+folders_list.expand_hint=Grupe ausklappen
+folders_list.local_folders=Lokale Folder
+folders_list.online_folders=Online Folder
 
-##folders_tab.no_folders_available=No folders available
+folders_tab.no_folders_available=Keine Folder verfügbar
 
 #orig#free_limit_dialog.buy_pro=Buy PowerFolder Pro
 free_limit_dialog.buy_pro=PowerFolder Pro kaufen
@@ -802,7 +796,7 @@ free_limit_dialog.reduce=Nutzung verringern
 #orig#free_limit_dialog.title=Extensive use detected
 free_limit_dialog.title=Intensive Nutzung erkannt
 #orig#free_limit_dialog.whatispro=Why should I upgrade to PowerFolder Pro?
-free_limit_dialog.whatispro=Warum sollte ich PowerFolder Pro kaufen?
+free_limit_dialog.whatispro=Warum sollte ich PowerFolder Pro erwerben?
 
 #orig#friend.search.personal.message.text=You may include a personal message
 friend.search.personal.message.text=Nachricht mitschicken
@@ -811,8 +805,8 @@ friend.search.personal.message.text2=Sie k\u00f6nnen {0} eine Nachricht mitschic
 #orig#friend.search.personal.message.title=Add friend message
 friend.search.personal.message.title=Freund hinzuf\u00fcgen (Nachricht)
 
-##friend_search.no_computers_found=No computers found
-##friend_search.node_table.account=User
+friend_search.no_computers_found=Keine Computer gefunden
+friend_search.node_table.account=Benutzer
 #orig#friend_search.node_table.ip=IP
 friend_search.node_table.ip=IP
 #orig#friend_search.node_table.last_seen_online=Last seen online
@@ -833,8 +827,8 @@ friends_panel.unable_to_connect=Gerade online (Kann nicht verbinden)
 
 #orig#general.accept=Accept
 general.accept=Annehmen
-##general.application.name=PowerFolder
-##general.archive_mode=File archive (local)
+general.application.name=PowerFolder
+general.archive_mode=Dateiarchiv (lokal)
 #orig#general.cancel=Cancel
 general.cancel=Abbrechen
 #orig#general.cancel.key=C
@@ -853,7 +847,7 @@ general.delete=L\u00f6schen
 general.delete.key=D
 #orig#general.directory=Directory
 general.directory=Verzeichnis
-##general.email=Email
+general.email=Email
 #orig#general.estimated_size=Estimated size
 general.estimated_size=gesch\u00e4tzte Gr\u00f6\u00dfe
 #orig#general.file=File
@@ -894,14 +888,14 @@ general.not_available=nicht verf\u00fcgbar
 general.ok=OK
 #orig#general.ok.key=O
 general.ok.key=\u00dc
-##general.password=Password
+general.password=Passwort
 #orig#general.powerfolder=PowerFolder
 general.powerfolder=PowerFolder
 #orig#general.preview_folder=Preview folder
 general.preview_folder=Vorschau
 #orig#general.proxy_settings=Proxy settings
 general.proxy_settings=Proxy Einstellungen
-##general.reject=Reject
+general.reject=Ablehnen
 #orig#general.saturday=Saturday
 general.saturday=Samstag
 #orig#general.save=Save
@@ -912,8 +906,8 @@ general.save.key=S
 general.search=Suchen
 #orig#general.seconds=Second(s)
 general.seconds=Sekunden
-##general.server=Server
-##general.server_only=Server only
+general.server=Server
+general.server_only=Nur Server
 #orig#general.size=Size
 general.size=Gr\u00f6\u00dfe
 #orig#general.sunday=Sunday
@@ -926,16 +920,24 @@ general.thursday=Donnerstag
 general.time=%02d\:%02d\:%02d
 #orig#general.today=Today
 general.today=Heute
-##general.transfer_mode=Transfer mode
+general.transfer_mode=Transfer Modus
 #orig#general.tuesday=Tuesday
 general.tuesday=Dienstag
-##general.update=Update
+general.update=Update
 #orig#general.wednesday=Wednesday
 general.wednesday=Mittwoch
 #orig#general.what_is_this=What is this?
 general.what_is_this=Was ist das?
 #orig#general.yesterday=Yesterday
 general.yesterday=Gestern
+
+
+## -------------------------------------------------------------------
+##
+## @ TOT: Bis hier übersetzt
+##
+## -------------------------------------------------------------------
+
 
 ##home_tab.computers=Computer(s)
 ##home_tab.files_available=File(s) available
